# distgen

./: .gitignore  .travis.yml  AUTHORS  MANIFEST.in  Makefile  NEWS  README.md  TODO  config.yaml  dg  dg.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: push-copr-build.yml  pypi-publish.yml  python-diff-lint.yml
.travis/: copr-build-setup  copr-custom-script  script
config/: rhel-7-x86_64.yaml
config/lib/: fedora.yaml
distconf/: centos-7-x86_64.yaml  fedora-20-i686.yaml  fedora-20-x86_64.yaml  fedora-21-i686.yaml  fedora-21-x86_64.yaml  fedora-22-i686.yaml  fedora-22-x86_64.yaml  fedora-23-x86_64.yaml  fedora-24-i686.yaml  fedora-24-x86_64.yaml  fedora-25-i686.yaml  fedora-27-i686.yaml  fedora-rawhide-i686.yaml  fedora-rawhide-x86_64.yaml  rhel-7-x86_64.yaml  rhel-7.2-x86_64.yaml  rhel-7.3-x86_64.yaml
distconf/lib/: centos.yaml  fedora.yaml  general.yaml  rhel.yaml  rpmsystems.yaml
distgen/: __main__.py  cli_parser.py  commands.py  config.py  distro_version.py  err.py  generator.py  multispec.py  pathmanager.py  project.py  version.py
distgen/_private/: abstract_paths.py  paths.py
distgen/distconf/: centos-6-x86_64.yaml  centos-7-x86_64.yaml  centos-8-x86_64.yaml  centos-stream-11-x86_64.yaml  centos-stream-8-x86_64.yaml  centos-stream-9-x86_64.yaml  fedora-20-x86_64.yaml  fedora-21-i686.yaml  fedora-21-x86_64.yaml  fedora-23-i686.yaml  fedora-25-x86_64.yaml  fedora-26-i686.yaml  fedora-26-x86_64.yaml  fedora-27-x86_64.yaml  fedora-28-i686.yaml  fedora-28-x86_64.yaml  fedora-29-i686.yaml  fedora-29-x86_64.yaml  fedora-30-i686.yaml  fedora-30-x86_64.yaml  fedora-31-i686.yaml  fedora-31-x86_64.yaml  fedora-32-i686.yaml  fedora-32-x86_64.yaml  fedora-33-i686.yaml  fedora-33-x86_64.yaml  fedora-35-i686.yaml  fedora-35-x86_64.yaml  fedora-36-i686.yaml  fedora-36-x86_64.yaml  fedora-37-i686.yaml  fedora-37-x86_64.yaml  fedora-38-i686.yaml  fedora-38-x86_64.yaml  fedora-39-i686.yaml  fedora-39-x86_64.yaml  fedora-40-i686.yaml  fedora-40-x86_64.yaml  fedora-41-i686.yaml  fedora-41-x86_64.yaml  (+12 more)
docs/: Makefile  builtins.rst  conf.py  config.rst  index.rst  intro.rst  macros.rst  rerendering.rst  spec_expansion.rst  spec_multispec.rst  usage.rst
rpm/: .gitignore  BUILT-Fix-builds-on-EPEL8-due-to-outdated-components.patch  BUILT-Fix-builds-on-EPEL9-due-to-outdated-components.patch  Makefile  distgen.spec  distgen.spec.dg
templates/: README  docker.tpl  general.tpl  makefile-macros.tpl
tests/: .gitignore  testsuite
tests/SAMPLE/: .gitignore  (+2 more)
(+94 files in other folders)
