[build-system]
requires = ["argparse-manpage[setuptools]"]
build-backend = "setuptools.build_meta"
# requires = ["setuptools>=58.5.0"]
# build-backend = "setuptools.build_meta"

[project]
name = "distgen"
version = "2.0"
dependencies = [
  "distro",
  "jinja2",
  "pyyaml",
  "setuptools"
]
requires-python = ">=3.0"
authors = [
  {name = "Pavel Raiskup", email = "praiskup@redhat.com"},
  {name = "Slávek Kabrda", email = "bkabrda@redhat.com"},
  {name = "Tomáš Tomeček", email = "ttomecek@redhat.com"},
  {name = "Ales Nezbeda", email = "anezbeda@redhat.com"},
]
maintainers = [
  {name = "Ales Nezbeda", email = "anezbeda@redhat.com"}
]
description = "Templating system/generator for distributions"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)"
]

[tool.setuptools.cmdclass]
build_py = "build_manpages.build_py"
install = "build_manpages.install"
build_manpages = "build_manpages.build_manpages"

[project.scripts]
dg = "distgen.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ['distgen*']

[tool.build_manpages]
manpages = [
    "man/dg.1:object=parser:pyfile=distgen/cli_parser.py",
]